# CBModem

hardware/: Custom.bak  Custom.dcm  Custom.lib  _autosave-communicator_27mhz.kicad_pcb  communicator_27mhz-cache.lib  communicator_27mhz-rescue.lib  communicator_27mhz.kicad_pcb  communicator_27mhz.kicad_pcb-bak  communicator_27mhz.kicad_prl  communicator_27mhz.kicad_pro  communicator_27mhz.kicad_sch  communicator_27mhz.net  communicator_27mhz.pro  communicator_27mhz.sch  communicator_27mhz_custom.bak  communicator_27mhz_custom.kicad_sym  fp-info-cache  fp-lib-table  protocol.txt  sym-lib-table
hardware/Custom_pcb.pretty/: Chinese_inductor.kicad_mod  MLT-1.kicad_mod  SP4-1.kicad_mod  Texas_R-PDSO-G5.kicad_mod
hardware/communicator_27mhz_custompcb.pretty/: Ferrite_ring_10x6x5_vertical.kicad_mod  Ferrite_ring_16x9x4_double_vertical.kicad_mod  Ferrite_ring_16x9x4_vertical.kicad_mod  (+6 more)
software/: .gitignore  Makefile  compile.sh  m328def.inc  modem.asm-avr  modem.c  protocol.txt
software/esp32/app/components/customdsp/: CMakeLists.txt
software/esp32/app/components/customdsp/includes/: cdsp_agc.h  cdsp_common.h  cdsp_converters.h  cdsp_fir.h  cdsp_fir_taps.h  cdsp_gen.h  cdsp_modulator.h  cdsp_rational_resamplers.h  cdsp_sink.h  cdsp_source.h  cdsp_timing_recovery.h
software/esp32/app/components/customdsp/srcs/: cdsp_agc.cpp  cdsp_converters.cpp  cdsp_fir.cpp  cdsp_fir_taps.cpp  cdsp_gen.cpp  cdsp_modulator.cpp  cdsp_rational_resamplers.cpp  cdsp_sink.cpp  cdsp_source.cpp  cdsp_timing_recovery.cpp
software/pc/libcbm/: CMakeLists.txt  libcbm.cpp  libcbm.h
(+81 files in other folders)
